<?xml version="1.0" encoding="utf-8"?>
<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="16dp"
    tools:context=".DetailPokemon">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha=".1"
            android:src="@drawable/background_pokemon_ball"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/detail_poke_img"
            android:layout_width="150dp"
            android:layout_height="250dp"
            android:layout_marginStart="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/detail_text_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:paddingHorizontal="5dp"
            android:background="@color/purple_50"
            android:textColor="@color/black"
            android:gravity="center"
            android:text="@string/pokemon_name"
            android:textSize="16dp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/detail_poke_img"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/detail_poke_name"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="3dp"
            android:text="@string/pokemon_name"
            android:textColor="@color/black"
            android:textSize="16dp"
            app:layout_constraintStart_toEndOf="@+id/detail_poke_img"
            app:layout_constraintTop_toBottomOf="@+id/detail_text_name" />

        <TextView
            android:id="@+id/detail_text_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:paddingHorizontal="5dp"
            android:background="@color/green"
            android:textColor="@color/black"
            android:text="@string/pokemon_types"
            android:textSize="16dp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/detail_poke_img"
            app:layout_constraintTop_toBottomOf="@+id/detail_poke_name" />

        <TextView
            android:id="@+id/detail_poke_type"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="3dp"
            android:text="@string/pokemon_types"
            android:textColor="@color/black"
            android:textSize="16dp"
            app:layout_constraintStart_toEndOf="@+id/detail_poke_img"
            app:layout_constraintTop_toBottomOf="@+id/detail_text_type" />

        <TextView
            android:id="@+id/detail_text_weakness"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:paddingHorizontal="5dp"
            android:background="@color/red_100"
            android:textColor="@color/black"
            android:text="@string/pokemon_weakness"
            android:textSize="16dp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/detail_poke_img"
            app:layout_constraintTop_toBottomOf="@id/detail_poke_type" />

        <TextView
            android:id="@+id/detail_poke_weakness"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="3dp"
            android:text="@string/pokemon_weakness"
            android:textColor="@color/black"
            android:textSize="16dp"
            app:layout_constraintStart_toEndOf="@+id/detail_poke_img"
            app:layout_constraintTop_toBottomOf="@+id/detail_text_weakness" />

        <TextView
            android:id="@+id/detail_text_ability"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:paddingHorizontal="5dp"
            android:background="@color/blue"
            android:textColor="@color/black"
            android:text="@string/pokemon_ability"
            android:textSize="16dp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/detail_poke_img"
            app:layout_constraintTop_toBottomOf="@id/detail_poke_weakness" />

        <TextView
            android:id="@+id/detail_poke_ability"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="3dp"
            android:text="@string/pokemon_ability"
            android:textColor="@color/black"
            android:textSize="16dp"
            app:layout_constraintStart_toEndOf="@+id/detail_poke_img"
            app:layout_constraintTop_toBottomOf="@+id/detail_text_ability" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="250dp" />

        <include
            android:id="@+id/include_detail_pokemon_desc"
            layout="@layout/detail_pokemon_desc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline1" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="375dp" />

        <include
            android:id="@+id/include_btn_back"
            layout="@layout/button_back_to_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/include_detail_pokemon_desc" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView >